# dictrs

./: Cargo.toml  README.md  dictrs.yaml
src/: command.rs  main.rs  request.rs  yaml.rs
