[package]
name = "dictrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
dirs = "4.0.0"
dotenv = "0.15.0"
prettytable-rs = "0.10.0"
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9"
tokio = { version = "1.26.0", features = ["full"] }
yaml-rust = "0.4.5"
